@@ -257,10 +257,14 @@ WIDGET_DEFAULT = {
         "show_rpm": True,
         "font_color_rpm": "#FFFFFF",
         "bkg_color_rpm": "#222222",
+        "show_rpm_maximum": True,
+        "font_color_rpm_maximum": "#FFFFFF",
+        "bkg_color_rpm_maximum": "#222222",
         "column_index_oil": 1,
         "column_index_water": 2,
         "column_index_turbo": 3,
         "column_index_rpm": 4,
+        "column_index_rpm_maximum": 5,
     },
     "flag": {
         "enable": True,
